layout and alignment fix

--- a/style.css
+++ b/style.css
@@ -18,23 +18,24 @@ body {
 
 .container {
   display: flex;
-  width: 80%;
-  max-width: 1000px;
+  width: 100%;
+  height: 100%;
   background-color: white;
-  border-radius: 8px;
+  border-radius: 30px;
   overflow: hidden;
+  padding-left: 20px;
 }
 
 
 .image-section {
-  flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
   height: 90vh; 
+  width: 50%;
   margin-top: 20px;
-  border-radius: 8px;
+  border-radius: 30px;
   overflow: hidden; 
 }
 
@@ -76,10 +77,12 @@ body {
 
 .arrow.left {
   left: 10px;
+  width: 50px;
 }
 
 .arrow.right {
   right: 10px;
+  width: 50px;
 }
 
 
@@ -89,20 +92,20 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: self-start;
   height: 100vh;
 }
 
 .form-section h1 {
   font-size: 2rem;
-  margin-bottom: 10px;
-  color: #333;
+  margin-bottom: 30px;
+  color: #000000;
   text-align: center;
 }
 
 .form-section h2 {
   font-size: 1.2rem;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
   color: #777;
   text-align: center;
 }
@@ -138,6 +141,7 @@ form button {
   border-radius: 4px;
   cursor: pointer;
   margin-bottom: 20px;
+  margin-top: 50px;
 }
 
 form button:hover {
@@ -162,3 +166,6 @@ form button:hover {
   text-decoration: underline;
 }
 
+.sizeBox{
+  width: 12%;
+}
